--- a/src/app/components/passport-service/passport-service.component.html
+++ b/src/app/components/passport-service/passport-service.component.html
@@ -99,7 +99,7 @@
         </p>
       </div>
       <ng-template #elseContentBlock>
-        <div [innerHtml]="currentContent"></div>
+        <div [innerHtml]="currentContent" class="custom-style-elements"></div>
       </ng-template>
     </div>
   </div>
