--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,7 +115,7 @@ html {
 
 .custom-style-elements {
   li {
-    list-style-type: "❁";
+    list-style-type: "◉";
     line-height: 1.5;
     padding-left: 1rem;
 
