--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -13,7 +13,7 @@
     .option {
       color: #000;
       text-align: center;
-      padding: 18px 16px;
+      padding: 16px;
       text-decoration: none;
       font-size: 17px;
       border: none;
@@ -136,7 +136,7 @@
     font-size: 17px;
     border: none;
     outline: none;
-    padding: 18px 16px;
+    padding: 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -146,7 +146,7 @@
   a {
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: 9px 16px;
     text-decoration: none;
     text-align: left;
     border-right: 1px solid #dedede;
