--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,12 +1,19 @@
-<div>
-  <div class="card">
-    <div class="text-900 font-bold text-xl mb-3">{{ pageData.heading }}</div>
-    <p class="text-600 line-height-3">{{ pageData.description }}</p>
+<div class="wrapper mb-3">
+  <div class="my-4">
+    <h3 class="mb-0 main-heading text-center">
+      <i class="pi pi-question-circle mr-2 text-xl"></i>{{ pageData?.title }}
+    </h3>
+    <div class="text-900 font-bold text-xl mb-3 section-heading">
+      
+    </div>
+    <div class="text-600 line-height-3" [innerHTML]="loadAnswer(pageData?.description)"></div>
   </div>
 
-  <div class="flex flex-column md:flex-row gap-5">
+  <div class="flex flex-column md:flex-row gap-3">
     <div class="card mb-0 md:w-20rem">
-      <div class="text-900 block font-bold mb-3">Categories</div>
+      <div class="text-900 block font-bold mb-3 section-heading">
+        Categories
+      </div>
       <ul class="list-none m-0 p-0">
         <li
           pRipple
@@ -29,7 +36,7 @@
     <div class="card flex-1">
       <p-accordion>
         <p-accordionTab
-          *ngFor="let faq of items[activeIndex].faq"
+          *ngFor="let faq of items[activeIndex]?.faq"
           [header]="faq.question"
         >
           <div
