--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,45 +1,74 @@
-<div class="card wrapper">
-  <h3>Contact Us</h3>
+<div class="wrapper mb-3">
+  <div class="my-4">
+    <h3 class="mb-0 main-heading text-center">
+      <i class="fa fa-address-book mr-1"></i> Contact Us
+    </h3>
+  </div>
 
-  <div class="">
-    <div class="left-container">
-      <div class="options-container">
-        <div
-          *ngFor="let center of centers; index as i"
-          (click)="handleCenterChange(i)"
-          [ngClass]="{ active: center === selectedCenter }"
-          class="option"
-        >
-          {{ center.attributes.title }}
-        </div>
+  <div class="container">
+    <div class="options-container card mb-0 p-3">
+      <div
+        *ngFor="let center of centers; index as i"
+        (click)="handleCenterChange(i)"
+        class="flex align-items-center cursor-pointer select-none p-3 transition-colors transition-duration-150 border-round"
+        [ngClass]="{
+          active: activeIndex === i,
+          'hover:surface-hover': activeIndex !== i
+        }"
+      >
+        {{ center.attributes.title }}
       </div>
+    </div>
 
-      <div class="content-container">
-        <h4>{{ selectedCenter?.attributes.title }}</h4>
+    <div class="subcontainer card">
+      <div class="center-container" *ngIf="selectedCenter">
         <div>
-          <b>Address</b>
-          <div [innerHTML]="address" class="address-container"></div>
-        </div>
+          <div class="content-container">
+            <h3 class="section-heading">
+              {{ selectedCenter?.attributes?.title }}
+            </h3>
+            <div>
+              <b>Address</b>
+              <div
+                [innerHTML]="renderHtml(selectedCenter.attributes.address)"
+                class="address-container"
+              ></div>
+            </div>
 
-        <div class="mt-3">
-          <b>Telephone: </b>
-          <span>{{ selectedCenter?.attributes?.phone }}</span>
-        </div>
+            <div class="mt-3" *ngIf="center?.attributes?.phone">
+              <b>Telephone: </b>
+              <span>{{ selectedCenter?.attributes?.phone }}</span>
+            </div>
 
-        <div class="mt-3" [innerHTML]="content"></div>
+            <div class="mt-3" [innerHTML]="content"></div>
+          </div>
 
-        <div *ngIf="mapEmbedLink" class="mt-3">
-          <iframe
-            [src]="mapEmbedLink"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          <div
+            class="map-container"
+            *ngIf="selectedCenter?.attributes?.embed_map_link"
+          >
+            <iframe
+              [src]="renderMapLink(selectedCenter.attributes.embed_map_link)"
+              width="90%"
+              height="350"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-fussion"
+  [fullScreen]="true"
+>
+  <app-loader></app-loader>
+</ngx-spinner>
