--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  height: calc(100vh - 5rem);
+  height: calc(63vh - 5rem);
   width: 99.6vw;
   background: linear-gradient(
     178deg,
@@ -8,17 +8,87 @@
   );
   position: relative;
   overflow: hidden;
-  // background-image: url("/src/assets/demo/images/hero-bg.png");
 
   color: #fff;
   font-family: "Poppins-800";
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 
+  @media (min-width: 768px) {
+    height: calc(47vh - 5rem);
+  }
+
+  @media (min-width: 900px) {
+    height: calc(53vh - 5rem);
+  }
+
+  @media (min-width: 900px) {
+    height: calc(57vh - 5rem);
+  }
+
+  @media (min-width: 1100px) {
+    height: calc(61vh - 5rem);
+  }
+
+  @media (min-width: 1200px) {
+    height: calc(63vh - 5rem);
+  }
+
+  @media (min-width: 1400px) {
+    height: calc(75vh - 5rem);
+  }
+
+  @media (min-width: 1500px) {
+    height: calc(80vh - 5rem);
+  }
+
+  @media (min-width: 1600px) {
+    height: calc(85vh - 5rem);
+  }
+
+  @media (min-width: 1700px) {
+    height: calc(90vh - 5rem);
+  }
+
+  @media (min-width: 1800px) {
+    height: calc(95vh - 5rem);
+  }
+
+  .hero-banner-carousel {
+    height: 100%;
+    @media (max-width: 500px) {
+      height: 30rem;
+    }
+  }
+
+  .hero-banner-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    @media (max-width: 576px) {
+      height: 30rem;
+      object-fit: cover;
+    }
+    // right: 0;
+  }
+
+  .flag-img {
+    width: 95px;
+    height: 95px;
+    border-radius: 10rem;
+    object-fit: cover;
+  }
+
   // background: #282c34;
   // animation css code
+  .hero-banner-text {
+    width: 80%;
+    margin: 0 auto;
+    position: absolute;
+  }
+
   .main {
     // height: 90vh;
     width: 100%;
@@ -28,10 +98,10 @@
     text-align: center;
   }
   h1 {
-    text-align: center;
     text-transform: uppercase;
     color: #f1faee;
     font-size: 4rem;
+    display: flex;
   }
 
   .roller {
@@ -39,11 +109,11 @@
     line-height: 4rem;
     position: relative;
     overflow: hidden;
-    width: 99vw;
+    width: 50rem;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-top: 5px;
     color: #feef22;
   }
 
@@ -60,6 +130,7 @@
     top: 0;
     animation: slide 10s infinite;
     animation-delay: 2s;
+    text-align: left;
   }
 
   @keyframes slide {
@@ -73,7 +144,7 @@
       top: -8rem;
     }
     72.5% {
-      top: -12.25rem;
+      top: -12rem;
     }
     90% {
       top: -16rem;
@@ -118,6 +189,12 @@
     }
   }
 
+  @media screen and (max-width: 1100px) {
+    h1 {
+      font-size: 3rem;
+    }
+  }
+
   .hero-description {
     font-family: "Karla-400";
   }
@@ -150,6 +227,10 @@
     }
   }
 
+  .foreground {
+    mix-blend-mode: difference;
+  }
+
   .banner-bg-img2 {
     width: 60%;
     position: absolute;
@@ -163,6 +244,7 @@
     }
 
     @media (max-width: 1600px) {
+      left: 68%;
       width: 70%;
       bottom: -90px;
     }
@@ -182,29 +264,37 @@
 .process-container {
   padding: 2rem;
 
+  @media (max-width: 576px) {
+    padding: 1rem;
+  }
+
   .process-subcontainer {
     display: flex;
-    align-items: center;
-    gap: 2rem;
+    align-items: stretch;
+    gap: 1.5rem;
 
-    .gif-element {
-      border-radius: 14px;
+    @media (max-width: 500px) {
+      flex-direction: column;
     }
   }
 
-  .gif-container {
-    width: 50%;
-  }
-
   .process-block {
-    background: #feef22;
-    width: 12rem;
-    height: 12rem;
-    border-radius: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 33%;
     padding: 1rem;
+    border: 1px solid #cecece;
+    border-radius: 12px;
+
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+
+    .process-title {
+      margin-top: 5px;
+      font-size: 18px;
+      color: #000;
+      font-family: "Poppins-500";
+      font-weight: 500;
+    }
   }
 
   .tooltip,
@@ -355,6 +445,16 @@
       }
     }
   }
+
+  @media (max-width: 500px) {
+    flex-direction: column;
+    padding: 2rem 0;
+    gap: 2rem;
+
+    .subcontainer {
+      width: 100%;
+    }
+  }
 }
 
 .testimonial-card {
@@ -420,5 +520,13 @@
   .number-subtitle {
     color: #000;
     font-family: "Poppins-500";
+  }
+}
+
+.banner-carousel {
+  padding: 2rem;
+
+  @media (max-width: 500px) {
+    padding: 1rem 0;
   }
 }
