--- a/src/app/components/news/singlearticle/singlearticle.component.html
+++ b/src/app/components/news/singlearticle/singlearticle.component.html
@@ -1,5 +1,5 @@
 <div class="px-8">
-  <div class="card">
+  <div class="card mb-1">
     <h3 class="mb-1">{{ article?.title }}</h3>
     <p>Published on {{ article?.date }}</p>
 
