--- a/src/app/components/useful-links/useful-links.component.html
+++ b/src/app/components/useful-links/useful-links.component.html
@@ -1,12 +1,26 @@
-<div class="card wrapper">
-  <h3 class="px-4 text-center">{{ pageData?.heading }}</h3>
-  <div class="px-4 flex gap-3 flex-wrap justify-content-center">
-    <div *ngFor="let link of links" class="link-component">
+<div class="wrapper mb-3">
+  <h3 class="text-center main-heading">{{ pageData?.title }}</h3>
+  <div class="px-4">
+    <!-- <div *ngFor="let link of links" class="link-component">
       <a class="fancy" [href]="link.link">
         <span class="top-key"></span>
         <span class="text text-xl">{{ link.label }}</span>
         <span class="bottom-key-1"></span>
       </a>
+    </div> -->
+
+    <div class="card">
+      <div [innerHTML]="renderHtml(pageData?.description)"></div>
     </div>
   </div>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-fussion"
+  [fullScreen]="true"
+>
+  <app-loader></app-loader>
+</ngx-spinner>
