--- a/src/app/components/visa-type/visa-type.component.html
+++ b/src/app/components/visa-type/visa-type.component.html
@@ -23,3 +23,13 @@
     </div>
   </div>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-fussion"
+  [fullScreen]="true"
+>
+  <app-loader></app-loader>
+</ngx-spinner>
