--- a/src/assets/layout/styles/layout/_footer.scss
+++ b/src/assets/layout/styles/layout/_footer.scss
@@ -3,16 +3,68 @@ app-footer {
 }
 
 .layout-footer {
-  padding: 1rem 2rem;
+  padding: 1rem 0;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #40404f;
-  color: #fff;
+  // justify-content: space-between;
+  flex-direction: column;
+  background: #192733;
+  color: #b6c7d6;
+
+  a {
+    color: #b6c7d6;
+    cursor: pointer;
+
+    &:hover {
+      color: #fffefb;
+      text-decoration: underline;
+    }
+  }
 
   @media (max-width: 500px) {
     flex-direction: column;
     gap: 6px;
+  }
+
+  // .footer-subcontainer {
+  //   margin-left: auto;
+  //   margin-right: auto;
+  //   max-width: 1080px;
+  //   // margin: 0 auto;
+  // }
+
+  .top-section {
+    display: flex;
+    // justify-content: space-between;
+    gap: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+
+    .left-side {
+      width: 50%;
+      display: flex;
+      gap: 3rem;
+    }
+
+    .right-side {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+
+  .divider-bg {
+    .p-divider-content {
+      // background-color: #060606;
+      background-color: #192733;
+    }
+  }
+
+  .bottom-section {
+    margin-top: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .footer-start {
